hphp/test/slow/dv_array/hh-only1.php.expectf

Fatal error: syntax error, unexpected ',', expecting ']' in %s/hh-only1.php on line 4
